FIx Magazine section mobile to desktop version

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -572,6 +572,17 @@ article img {
   font: bold 16px/26px "Roboto Condensed", sans-serif;
 }
 
+.magazine-content .card-img-top {
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .magazine-content .card-img-top {
+    height: 22vw;
+    object-fit: cover;
+  }
+}
+
 .card-title span a:hover {
   color: inherit;
   text-decoration: none;
